fix mobile view layout bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@ a {
   text-decoration: none;
 }
 
+.hide-sm-screen {
+  display: none;
+}
+
 /* ------------ NAVIGATION ------------ */
 
 #nav {
@@ -256,6 +260,7 @@ a {
   border: none;
   height: 24px;
   font-size: 0.75rem;
+  padding-left: 0px;
 }
 
 #vote-button:hover {
@@ -263,31 +268,6 @@ a {
 }
 
 /* ------------ MEDIA QUERIES ------------ */
-
-/* @media (prefers-color-scheme: dark) {
-  :host {
-    --cr-toggle-checked-bar-color: var(--google-blue-300);
-    --cr-toggle-checked-button-color: var(--google-blue-300);
-    --cr-toggle-checked-ripple-color:
-      rgba(var(--google-blue-300-rgb), .4);
-    --cr-toggle-unchecked-bar-color: var(--google-grey-500);
-    --cr-toggle-unchecked-button-color: var(--google-grey-300);
-    --cr-toggle-unchecked-ripple-color:
-      rgba(var(--google-grey-300-rgb), .4);
-  }
-
-}
-
-:host([dark]) {
-  --cr-toggle-checked-bar-color: var(--google-blue-300);
-  --cr-toggle-checked-button-color: var(--google-blue-300);
-  --cr-toggle-checked-ripple-color:
-    rgba(var(--google-blue-300-rgb), .4);
-  --cr-toggle-unchecked-bar-color: var(--google-grey-500);
-  --cr-toggle-unchecked-button-color: var(--google-grey-300);
-  --cr-toggle-unchecked-ripple-color:
-    rgba(var(--google-grey-300-rgb), .4);
-} */
 
 @media (min-width: 768px) {
   /* ------------ NAVIGATION MEDIA ------------ */
@@ -555,6 +535,10 @@ a {
     width: 20px;
     height: 20px;
     margin: 0 16px 0 24px;
+  }
+
+  .fa-palette {
+    padding: 3px;
   }
 
   .fa-image,
@@ -1028,11 +1012,31 @@ a {
     border-radius: 0 0 5px 5px;
   }
 
+  .default-color-theme-active {
+    position: relative;
+  }
+
+  .color-selected-check {
+    position: absolute;
+    right: -1px;
+    top: -2px;
+    display: block;
+    text-align: center;
+    color: #000;
+    width: 22px;
+    height: 22px;
+    background-color: #8bb4f7;
+    border-radius: 50%;
+  }
+
   /* ----------------- COLOR THEME SECTION ------------------ */
 
   #color-theme-section {
     display: grid;
     grid-template-columns: repeat(6, auto);
+    gap: 20px;
+    align-items: center;
+    justify-content: flex-start;
     width: 582px;
     height: 372px;
     padding: 10px 0 25px 14px;
@@ -1069,6 +1073,13 @@ a {
 
   .custom-color {
     background-color: #f2f3f4;
+  }
+
+  .default-color-theme-active {
+    width: 73px;
+    height: 73px;
+    border: 4px solid #274778;
+    border-radius: 50%;
   }
 
   .default-color-border {
